--- a/HTL.html
+++ b/HTL.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     
-    <h1>Hola mundo </h1>
+    <h1 border = "solid">Hola mundo </h1>
     <link rel="stylesheet" type="text/css" href="css.css">
     
     </head>
